force-app/main/default/objects/Opportunity/fields/Assign_to_Inventory_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_Inventory_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assign to Inventory Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>