force-app/main/default/objects/Opportunity/fields/Assigned_user_email_id__c.field-meta.xml
<CustomField>
    <fullName>Assigned_user_email_id__c</fullName>
    <label>Assigned user email id</label>
    <type>Email</type>
</CustomField>