force-app/main/default/objects/Opportunity/fields/Is_Stock_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Stock_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Stock Available?</label>
    <type>Checkbox</type>
</CustomField>