force-app/main/default/objects/Opportunity/fields/Type_Account__c.field-meta.xml
<CustomField>
    <fullName>Type_Account__c</fullName>
    <formula>Account.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type (Account)</label>
    <type>Text</type>
</CustomField>