force-app/main/default/objects/Opportunity/recordTypes/Purchase_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Purchase_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <label>Purchase Opportunity</label>
</RecordType>